# kitek

./: .gitignore  CMakeLists.txt  README.md  TODO.md  run-base.bash  sync-driver.bash  sync-sysroot.bash
apps/cpp/: base.cpp  emitUDP.cpp  kitek.cpp
apps/py/: base.py  pidTool.py  test.py  vis.py
cmake/: Findlibevdev.cmake  Findpigpio.cmake
data/: config.yaml
deprecated/: Controller.py
lib/cpp/: Encoder.cpp  GPIOHandle.cpp  GPIOHandle.hpp  I2CHandle.cpp  I2CHandle.hpp  Joy.cpp  Joy.hpp  KitekHW.hpp  L298N.cpp  L298N.hpp  LED.cpp  LED.hpp  PID.cpp  PID.hpp  PeriodicTask.hpp  Servo.cpp  Servo.hpp  Wheel.cpp  Wheel.hpp  diagnostics.cpp  diagnostics.hpp
lib/include/: ClockAmplifier.hpp  Diagnostics.hpp  Encoder.hpp  GPIOGuard.hpp  Joy.hpp  KitekHW.hpp  L298N.hpp  LED.hpp  PCF8591.hpp  PID.hpp  TickManager.hpp  Tickable.hpp  UDPTransceiver.hpp  Wheel.hpp
lib/py/: UDPTransceiver.py
lib/src/: Diagnostics.cpp  Encoder.cpp  GPIOGuard.cpp  Joy.cpp  L298N.cpp  LED.cpp  PCF8591.cpp  PID.cpp  TickManager.cpp  UDPTransceiver.cpp  Wheel.cpp
proto/: Makefile  Protocol.proto
proto/cpp/: Protocol.pb.cc  Protocol.pb.h
proto/py/: Protocol_pb2.py
